# VoiceIn

./: .gitignore  AGENT.md  DESIGN.md  FRONTEND.md  PLAN.md  PRODUCT_SENSE.md
src/app/: audio_capture.py  config.py  hotkey.py  main.py  orchestrator.py  output.py  recognizer.py  test_capture.py  test_hotkey_tray.py  test_mic.py  test_rec.py  test_recognizer.py  tray.py
src/native/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  ring_buffer.h  test_dll.py
